--- a/gradle_directory/app/build.gradle
+++ b/gradle_directory/app/build.gradle
@@ -3,7 +3,7 @@
  *
  * This generated file contains a sample Java application project to get you started.
  * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
- * User Manual available at https://docs.gradle.org/7.2/userguide/building_java_projects.html
+ * User Manual available at https://docs.gradle.org/8.0.2/userguide/building_java_projects.html
  */
 
 plugins {
@@ -19,24 +19,24 @@ repositories {
 }
 
 shadowJar {
-   archiveBaseName.set('SingleCellQC')
+   archiveBaseName.set('singlecellqc')
    archiveClassifier.set('')
    archiveVersion.set('')
    }
 
 dependencies {
     // Use JUnit Jupiter for testing.
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
 
     // This dependency is used by the application.
+    implementation 'com.google.guava:guava:31.1-jre'
     implementation 'commons-cli:commons-cli:1.5.0'
-    implementation 'com.google.guava:guava:30.1.1-jre'
     implementation group: 'com.github.samtools', name: 'htsjdk', version: '2.24.1'
 }
 
 application {
     // Define the main class for the application.
-    mainClass = 'SingleCellQC.CellLevel_QC'
+    mainClass = 'singlecellqc.CellLevel_QC'
 }
 
 tasks.named('test') {
